# MathematicalExpressionAPI

./: .env.example  .gitignore  LICENSE  README.md  build_output.txt  lint_output.txt  main.py  package-lock.json  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: predict.py
backend/app/core/: config.py  vocab.py
backend/app/schemas/: predict.py
backend/app/services/: math_service.py  model_service.py
backend/app/utils/: image_utils.py  model_downloader.py
backend/tests/api/v1/: test_image_utils.py  test_model_service.py  test_predict.py
frontend/: package.json
frontend/src/app/draw/: page.tsx
frontend/src/components/: CanvasArea.tsx  CanvasControl.tsx
src/app/: page.tsx
src/components/: Instructions.tsx
src/styles/: canvas.css
